Refactoring for next figure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
-    <div id="field"></div>
+    <div class="game-container">
+      <div id="field"></div>
+      <div id="mini-field"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
