--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="game-container">
       <div id="field"></div>
       <div id="mini-field"></div>
+      <div id="highscore">Highscore: 0</div>
+      <div id="score">Score: 0</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
